label not visible bug fixed

--- a/styles.css
+++ b/styles.css
@@ -147,15 +147,19 @@ body {
     height: 100%;
     padding-left: 7px;
     color: rgb(250, 251, 252);
+    font-size: 17px;
     border-radius: 5px;
+    padding-top: 7px;
   }
   .email__label {
-    color: rgb(248, 245, 245);
+    color: rgb(173, 171, 171);
+    font-size: 16px;
     position: absolute;
     top: 28%;
     left: 2%;
     transition: 0.5s;
-    z-index: -1;
+    /* z-index: -1; */
+    pointer-events: none;
     /* margin-left: 0.5rem; */
     /* font-size: 15px; */
   }
